# QT-Projects

./: README.md
calculator/: .gitignore  .qmlls.ini  CMakeLists.txt  Main.qml  README.md  calculatorengine.cpp  calculatorengine.h  main.cpp
chat-application/: CMakeLists.txt  Main.qml  README.md  chatmanager.cpp  chatmanager.h  main.cpp  messagemodel.cpp  messagemodel.h
expense-tracker/: .gitignore  CMakeLists.txt  Main.qml  README.md  expensemanager.cpp  expensemanager.h  main.cpp
expense-tracker/components/: AddExpenseDialog.qml  CategoryBadge.qml  DonutChart.qml  ExpenseCard.qml  StatCard.qml
login-system/: CMakeLists.txt  Main.qml  README.md  authmanager.cpp  authmanager.h  main.cpp
media-player/: CMakeLists.txt  Main.qml  README.md  main.cpp  playermanager.cpp  playermanager.h
qml-animations/: CMakeLists.txt  Main.qml  README.md  animationcontroller.cpp  animationcontroller.h  main.cpp
text-editor/: CMakeLists.txt  Main.qml  README.md  filehandler.cpp  filehandler.h  main.cpp
todo-app/: CMakeLists.txt  Main.qml  README.md  main.cpp  todomanager.cpp  todomanager.h
weather-app/: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  weathermanager.cpp  weathermanager.h
